[gd_scene load_steps=6 format=3 uid="uid://bg34pji4c88je"]

[ext_resource type="Texture2D" uid="uid://x8xqr2gtwdyp" path="res://art/objects/laser_shooter.png" id="1_d3eyc"]
[ext_resource type="Script" path="res://components/laser/laser_shooter.gd" id="2_x6wfh"]
[ext_resource type="Texture2D" uid="uid://ckosq2o4v7h1o" path="res://art/objects/laser.png" id="3_dg3sg"]
[ext_resource type="Script" path="res://components/laser/laser_line.gd" id="3_fb83x"]
[ext_resource type="AudioStream" uid="uid://ofp4k2aqjq4l" path="res://audio/sfx/hit.wav" id="5_ehjkf"]

[node name="LaserShooter" type="Sprite2D"]
texture = ExtResource("1_d3eyc")
offset = Vector2(3, 0)
script = ExtResource("2_x6wfh")

[node name="PlayerCast" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(50, 0)
collision_mask = 19

[node name="LaserLine" type="Line2D" parent="."]
unique_name_in_owner = true
z_index = -1
points = PackedVector2Array(0, 0, 0, 0)
width = 2.0
texture = ExtResource("3_dg3sg")
texture_mode = 2
joint_mode = 2
begin_cap_mode = 1
end_cap_mode = 1
script = ExtResource("3_fb83x")

[node name="ToggleSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_ehjkf")
volume_db = 6.0
max_distance = 160.0
